--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,5 +44,6 @@
         android:id="@+id/textViewSignUp"
         android:layout_below="@+id/buttonLogin"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp" />
+        android:layout_marginTop="60dp"
+        android:textColor="#ff0000ff" />
 </RelativeLayout>
