--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,4 +5,8 @@
         android:title="@string/action_logout"
         android:orderInCategory="100"
         android:showAsAction="always" />
+    <item android:id="@+id/action_edit_friends"
+        android:title="@string/action_edit_friends"
+        android:orderInCategory="101"
+        android:showAsAction="collapseActionView" />
 </menu>
