--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-    <item android:id="@+id/action_logout"
-        android:title="@string/action_logout"
+    <item android:id="@+id/action_camera"
+        android:icon="@drawable/ic_action_camera"
+        android:title="@string/action_camera_label"
         android:orderInCategory="100"
         android:showAsAction="always" />
     <item android:id="@+id/action_edit_friends"
         android:title="@string/action_edit_friends"
         android:orderInCategory="101"
         android:showAsAction="collapseActionView" />
+    <item android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        android:orderInCategory="102"
+        android:showAsAction="always" />
 </menu>
