End of "Customizing a ListView for the Inbox"

--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.travis.ribbit.ImageViewerActivity">
+    tools:context="com.example.travis.ribbit.ui.ImageViewerActivity">
 
     <ImageView
         android:layout_width="match_parent"
