--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.travis.ribbit.SignUpActivity"
+    tools:context="com.example.travis.ribbit.ui.SignUpActivity"
     style="@style/AuthBackground">
 
     <ImageView
