--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="pressed_purple_button">#ba9dda</color>
     <color name="focused_purple_button">#d6c3ed</color>
     <color name="text_color">#250054</color>
+    <color name="light_purple_background">#e9e4ed</color>
+    <color name="swipe_refresh1">#482c6f</color>
+    <color name="swipe_refresh2">#ad78d9</color>
+    <color name="swipe_refresh3">#dcadf4</color>
+    <color name="swipe_refresh4">#ad78d9</color>
 </resources>
