--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="margin_layout_vertical">32dp</dimen>
     <dimen name="margin_layout_horizontal">16dp</dimen>
     <dimen name="padding_layout_credentials">10dp</dimen>
+    <dimen name="inbox_vertical_margin">10dp</dimen>
+    <dimen name="inbox_horizontal_margin">10dp</dimen>
+    <dimen name="message_vertical_padding">8dp</dimen>
 </resources>
