--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -11,12 +11,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true">
 
-        <ListView
+        <GridView
+            android:id="@+id/friendsGrid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@android:id/list"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:numColumns="auto_fit"
+            android:columnWidth="90dp"
+            android:stretchMode="columnWidth"
+            android:clipToPadding="false"
+            android:horizontalSpacing="@dimen/user_grid_spacing"
+            android:verticalSpacing="@dimen/user_grid_spacing"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
