--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="inbox_vertical_margin">10dp</dimen>
     <dimen name="inbox_horizontal_margin">10dp</dimen>
     <dimen name="message_vertical_padding">8dp</dimen>
+    <dimen name="user_grid_spacing">8dp</dimen>
+    <dimen name="user_grid_padding">4dp</dimen>
+    <dimen name="user_grid_text_height">44dp</dimen>
 </resources>
